--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "typescript_study",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AndrewKim330/typescript_study.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AndrewKim330/typescript_study/issues"
-  },
-  "homepage": "https://github.com/AndrewKim330/typescript_study#readme",
-  "devDependencies": {
-    "@types/node": "^18.0.6",
-    "tslint": "^6.1.3",
-    "typescript": "^4.7.4"
-  }
+    "name": "typescript_study",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "npx ts-node ./src/index.ts"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/AndrewKim330/typescript_study.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/AndrewKim330/typescript_study/issues"
+    },
+    "homepage": "https://github.com/AndrewKim330/typescript_study#readme",
+    "devDependencies": {
+        "@types/node": "^18.0.6",
+        "tslint": "^6.1.3",
+        "typescript": "^4.7.4"
+    },
+    "dependencies": {
+        "ts-node": "^10.9.1"
+    }
 }
