feat: Study NomadCoder lecture (Basic of Typescript - initial setting of Typescript, about JSDoc 220813)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "outDir": "dist",
         "sourceMap": true,
         "strict": true,
-        "target": "ES6"
+        "target": "ES6",
+        "allowJs": true
     },
     "include": ["src"]
 }
