--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "npx ts-node ./src/index.ts"
+        "start": "npx ts-node ./src/index.ts",
+        "dev": "nodemon --exec ts-node ./src/blockChain.ts"
     },
     "repository": {
         "type": "git",
@@ -24,6 +25,7 @@
         "typescript": "^4.7.4"
     },
     "dependencies": {
+        "nodemon": "^2.0.19",
         "ts-node": "^10.9.1"
     }
 }
