--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
         "sourceMap": true,
         "strict": true,
         "target": "ES6",
-        "allowJs": true
+        // "allowJs": true,
+        "esModuleInterop": true
     },
     "include": ["src"]
 }
